# adversarial-images

./: .gitignore  README.md  main.py  pyproject.toml  test.py
configs/: default.yaml  distill_default.yaml  finetune_default.yaml  jailbreak.yaml
data/: __init__.py  dataset.py  fetch_alpaca.py  harmbench_mini_custom.json  harmbench_mini_results.json  jailbreak_data.py  partition.py  specific_string_data.py
data/image_examples/: token_probs.csv
exp/: adversarial_distill.py  adversarial_finetune.py  adversarial_image.py  compare_all_models.py  harmbench_eval.py  inst_vs_think_single_q.py  plot_logits.py  plot_logits_ablation.py  plot_logits_finetune.py  test_adversarial_image.py  test_finetuned_model.py
models/: __init__.py  llava.py  model.py  qwen25_32b.py  qwen25inst.py  qwen3inst.py  qwen3think.py
scripts/: alloc.sh  example.sbatch  experiment.sbatch  inst_normal.sbatch  qwen25_jailbreak.sbatch  qwen3_jailbreak.sbatch  qwen_25_50k.sbatch  qwen_3_50k.sbatch  qwen_inst_50k_255.sbatch  qwen_think_50k_255.sbatch  setup.sh  think.sbatch  think_normal.sbatch
